# Rapture

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  index.html  params.json  shippable.yml
.github/: dependabot.yml
Apps/: build.gradle  featTest.sh  settings.gradle  testOper.script
Apps/OperationTest/: build.gradle
Apps/PluginInstaller/: build.gradle
Apps/RaptureAPIServer/: build.gradle
Apps/RaptureIntTests/: README.md  build.gradle
Apps/RaptureWebServer/: build.gradle
Apps/ReflexRunner/: build.gradle
Apps/RestServer/: Dockerfile  README.md  build.gradle  createDockerImage.sh  keystore.jks  runDocker.sh
Apps/ScheduleServer/: build.gradle
Apps/WatchServer/: Dockerfile  README.md  build.gradle  createDockerImage.sh
Apps/WatchServerPlugin/: Dockerfile  build.gradle  createDockerImage.sh
Apps/gradle/: libs.versions.toml
Doc/: modernization-plan.md
Doc/Rapture/: Rapture.tex  config.tex  template.tex
Doc/RaptureAPI/: Activity.tex  Admin.tex  Async.tex  Audit.tex  Blob.tex  Bootstrap.tex  Decision.tex  Doc.tex  Entitlement.tex  Environment.tex  Event.tex  Fields.tex  IdGen.tex  Index.tex  Jar.tex  Lock.tex  Mailbox.tex  Notification.tex  Pipeline.tex  Plugin.tex  Question.tex  Rapture.tex  RaptureAPI.tex  Relationship.tex  Repo.tex  Runner.tex  Schedule.tex  Script.tex  Series.tex  Sheet.tex  Structured.tex  Sys.tex  Table.tex  User.tex  classicthesis.sty  doit.sh  oldstuff.tex  types.tex  (+1 more)
Libs/: build.gradle  settings.gradle  test.sh
Libs/APILang/cpp/api/: CMakeLists.txt  common.h  connection.cpp  connection.hpp  login.cpp  main.cpp
Plugins/: README.md  build.gradle  dropRepo.script  featDS.sh  featTest.sh  featWidget.sh  settings.gradle
samples/: searchMeta.script  syswork.script
(+3931 files in other folders)
